# esr-lexicon

./: .coveralls.yml  .travis.yml  Cargo.toml  README.md  config.json  windows-install.sh
src/: cli.rs  config.rs  download.rs  main.rs  process.rs  save.rs  utils.rs
