[package]
name = "esr-lexicon"
version = "0.2.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["full"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
env_logger = "0.7.1"
log = "0.4.8"
jq-rs = { version = "0.4.1", features = ["bundled"] }
clap = "2.33.1"
futures = "0.3.5"
url = "2.1.1"

[dev-dependencies]
tempfile = "3.1.0"

[profile.release]
opt-level = 3
